--- a/content/data/config.json
+++ b/content/data/config.json
@@ -48,7 +48,8 @@
                 "url": "https://twitter.com/piyushdubey490?lang=en",
                 "style": "icon",
                 "icon": "twitter",
-                "new_window": true
+                "new_window": true,
+                "no_follow": true
             },
             {
                 "label": "Instagram",
