config.json: updated url in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -53,7 +53,7 @@
             },
             {
                 "label": "Instagram",
-                "url": "https://www.instagram.com/",
+                "url": "https://www.instagram.com/piyushdubey490/?hl=en",
                 "style": "icon",
                 "icon": "instagram",
                 "new_window": true
