config.json: updated url in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -68,7 +68,7 @@
             },
             {
                 "label": "LinkedIn",
-                "url": "https://www.linkedin.com/",
+                "url": "https://www.linkedin.com/in/piyush-dubey-209446a8/",
                 "style": "icon",
                 "icon": "linkedin",
                 "new_window": true
