--- a/content/data/config.json
+++ b/content/data/config.json
@@ -20,7 +20,8 @@
             {
                 "label": "Blog",
                 "url": "/blog/",
-                "style": "link"
+                "style": "link",
+                "new_window": true
             },
             {
                 "label": "Style Guide",
