--- a/content/data/config.json
+++ b/content/data/config.json
@@ -32,6 +32,15 @@
                 "label": "Contact",
                 "url": "/contact/",
                 "style": "link"
+            },
+            {
+                "label": "lorem-ipsum",
+                "url": "#",
+                "style": "link",
+                "icon": "dribbble",
+                "new_window": false,
+                "no_follow": false,
+                "type": "action"
             }
         ],
         "logo_img_alt": "PD"
