--- a/content/data/config.json
+++ b/content/data/config.json
@@ -39,7 +39,8 @@
                 "icon": "dribbble",
                 "new_window": false,
                 "no_follow": false,
-                "type": "action"
+                "type": "action",
+                "label": "FUN"
             }
         ],
         "logo_img_alt": "PD"
