--- a/content/data/config.json
+++ b/content/data/config.json
@@ -46,7 +46,7 @@
         "logo_img_alt": "PD"
     },
     "footer": {
-        "content": "© 2021 Piyush Dubey . All rights reserved. This Jamstack site was created with <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit</a>. Create yours <a href=\"https://app.stackbit.com/create?theme=exto&utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">now</a>",
+        "content": "© 2021 Piyush Dubey . All rights reserved. ",
         "has_social": true,
         "social_links": [
             {
