config.json: updated nav_links in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -35,6 +35,15 @@
                 "no_follow": false,
                 "type": "action",
                 "label": "FUN"
+            },
+            {
+                "label": "lorem-ipsum",
+                "url": "#",
+                "style": "link",
+                "icon": "dribbble",
+                "new_window": false,
+                "no_follow": false,
+                "type": "action"
             }
         ],
         "logo_img_alt": "PD"
