config.json: updated label in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -37,7 +37,7 @@
                 "label": "FUN"
             },
             {
-                "label": "lorem-ipsum",
+                "label": "Blog",
                 "url": "#",
                 "style": "link",
                 "icon": "dribbble",
