--- a/content/data/config.json
+++ b/content/data/config.json
@@ -38,7 +38,7 @@
             },
             {
                 "label": "Blog",
-                "url": "/blog",
+                "url": "/blog/",
                 "style": "link",
                 "icon": "dribbble",
                 "new_window": false,
