--- a/content/data/config.json
+++ b/content/data/config.json
@@ -39,7 +39,7 @@
             {
                 "label": "Blog",
                 "url": "/blog/",
-                "style": "link",
+                "style": "button",
                 "icon": "dribbble",
                 "new_window": false,
                 "no_follow": false,
