config.json: updated url in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -38,7 +38,7 @@
             },
             {
                 "label": "Blog",
-                "url": "/",
+                "url": "/blog",
                 "style": "button",
                 "icon": "dribbble",
                 "new_window": false,
